--- a/DbBackupper/packages.config
+++ b/DbBackupper/packages.config
@@ -6,4 +6,5 @@
   <package id="NLog" version="4.4.1" targetFramework="net45" />
   <package id="NLog.Config" version="4.4.1" targetFramework="net45" />
   <package id="NLog.Schema" version="4.4.1" targetFramework="net45" />
+  <package id="Npgsql" version="3.1.0" targetFramework="net45" />
 </packages>
