--- a/DbBackupper/packages.config
+++ b/DbBackupper/packages.config
@@ -4,7 +4,7 @@
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net452" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net452" />
   <package id="NLog" version="4.4.1" targetFramework="net45" />
-  <package id="NLog.Config" version="4.4.1" targetFramework="net45" />
-  <package id="NLog.Schema" version="4.4.1" targetFramework="net45" />
   <package id="Npgsql" version="3.1.0" targetFramework="net45" />
+  <package id="Swsu.Lignis.Logger.PrtAgent" version="1.7.1.9" targetFramework="net45" />
+  <package id="Swsu.Lignis.MiddleWare.Common" version="1.6.1.6" targetFramework="net45" />
 </packages>
