Перешел на систему протоколирования (логирование Голубкова). Мелкие правки. Добавлен словарь ресурсов для кодов ошибок от PostgreSQL

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .vs
 /DbBackupper/bin
 /DbBackupper/obj
-/DbBackupper.Console
-/DbDumper.Console
-/ProcessDemo
+DbBackupper.Console
+DbDumper.Console
+ProcessDemo
+packages
 
 *.doc
 *.docx
