--- a/DbBackupper/packages.config
+++ b/DbBackupper/packages.config
@@ -7,4 +7,6 @@
   <package id="Npgsql" version="3.1.0" targetFramework="net45" />
   <package id="Swsu.Lignis.Logger.PrtAgent" version="1.7.1.9" targetFramework="net45" />
   <package id="Swsu.Lignis.MiddleWare.Common" version="1.6.1.6" targetFramework="net45" />
+  <package id="Swsu.Lignis.SCMF.ModuleSCMF" version="1.2.2" targetFramework="net45" />
+  <package id="Swsu.Lignis.SCMF.ProtocolSCMF" version="0.2.3" targetFramework="net45" />
 </packages>
